automation_n8n/_infra/n8n_service_k8s/n8n-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: n8n
  name: n8n
  namespace: n8n
spec:
  replicas: 1
  selector:
    matchLabels:
      service: n8n
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: n8n
    spec:
      containers:
        - name: n8n
          image: n8nio/n8n:latest
          command: 
            - /bin/sh
          args:
            - -c
            - sleep 5; n8n start
          resources:
            requests:
              memory: "250Mi"
            limits:
              memory: "500Mi"
          volumeMounts:
            - name: n8n-pvc
              mountPath: /home/node/.n8n
              
      restartPolicy: Always
      volumes:
        - name: n8n-pvc
          persistentVolumeClaim:
            claimName: n8n-pvc
