automation_n8n/_infra/n8n_service_k8s/n8n-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: n8n
  name: n8n
  namespace: n8n
spec:
  type: NodePort
  ports:
    - name: http
      port: 5678
      targetPort: 5678
      nodePort: 30081
  selector:
    service: n8n
