automation_n8n/_infra/n8n_service_k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: postgres-n8n
  name: postgres-service
  namespace: databases
spec:
  type: ClusterIP
  ports:
    - name: postgres-n8n
      port: 5432
      targetPort: 5432
      protocol: TCP
  selector:
    service: postgres-n8n
