automation_n8n/_infra/n8n_service_k8s/n8n-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n
  namespace: n8n
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - n8n.ajaw.duckdns.org
      secretName: wildcard-ajaw-duckdns-tls
  rules:
    - host: n8n.ajaw.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n
                port:
                  number: 5678
